fixes main resizing layout issues

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -13,17 +13,22 @@ body {
 
 main {
     flex: 2;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 section {
     border: 1px solid #545454;
     border-radius: 0.5em;
-    max-width: 100vw;
+    width: 96%;
     margin: 5% 2%;
     background: rgba($color: $primary, $alpha: 0.8);
 
     @media (min-width: 800px) {
-        max-width: 800px;
+        width: 800px;
+        margin: 5% 0;
     }
 
     &.article-data {
