--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -4,7 +4,7 @@ header {
     padding: 20px 40px 10px 40px;
     flex-direction: row;
     align-items: flex-end;
-    width: 100%;
+    width: 100vw;
 
     @media (min-width: 950px) {
         align-self: center;
